umbrella-charts/athens-proxy/templates/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: athens-proxy-egress
spec:
  endpointSelector:
    matchLabels:
        app: athens-proxy
        release: athens-proxy
  egress:
    - toFQDNs:
          # code targets/repos
        - matchName: proxy.golang.org
          # checksum database to authenticate (Go) modules
        - matchName: sum.golang.org
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
